--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,53 +1,59 @@
-.header_container {
+#header-container {
   display: flex;
-  background: linear-gradient(0deg, rgba(0,0,0,0.00000001) 10%, rgba(0,0,0,0.90) 80%);
-  flex-direction: column;
-}
-
-.header_card_container {
-  width: 100%;
-  display: flex;
+  flex-direction: row;
   justify-content: space-between;
+
+  box-sizing: border-box;
+
+  width: 100vw;
+  padding: 20px;
+
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.00000001) 10%,
+    rgba(0, 0, 0, 0.9) 80%
+  );
+  color: #ffffff;
 }
 
-.header_icon {
-  width: 8vw;
-  height: 5vh;
-  margin: 0.6em
+img#header-icon {
+  height: 50px;
+  width: 50px;
 }
 
-.info_container {
-  margin: 0 0 0 0.3em
-}
-
-.line_container {
-  display: flex;
-  justify-content: space-between;
-  max-width: 40vw;
-}
-
-.text_h1 {
-  align-self: flex-start;
-  font-size: 1.9em;
-  color: white;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+#header-visit-card {
   font-weight: 600;
-  margin: 0.2em 0 0 0.2em;
 }
 
-.text_info {
-  color: white;
-  font-size: 0.9em;
-  font-weight: 400;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  margin: 0.3em 0 0.3em 0; 
+h1#header-title {
+  font-size: 2rem;
+  margin-top: 0;
 }
 
-.link {
-  color: white;
-  font-size: 0.9em;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  margin: 0.3em 0 0.3em 0; 
-  padding: 0;
-  text-decoration: none;
+.info-container {
+}
+
+.line-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.line-container.justified {
+  text-align: justify;
+}
+
+.text-info {
+  font-size: 1.2rem;
+  margin: 0.2rem 0;
+}
+
+.text-info-line {
+  height: 2.5px;
+  width: 100%;
+
+  margin: 0 10px;
+
+  background: #ffffff;
 }
