--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@ body {
 a {
   text-decoration: none;
   color: inherit;
-}
 
-a:hover {
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
 }
